--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,6 +9,7 @@
 .image.is-256x256 {
     max-height: 256px;
     max-width: 256px;
+    margin-top: 10px;
 }
 
 /* Reduce padding to fit on page */
@@ -20,6 +21,7 @@
 .suppress-section-padding {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
+    height: 100%;
 }
 .suppress-ul-padding {
     margin-top: 0.5rem !important;
